--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,3 +94,19 @@ textarea{
 ::placeholder {
    color: white;
   }
+
+
+  footer{
+      color: white;
+      background-color: #5768AD;
+      padding-top: 50px;
+  }
+
+  .footer ul{
+      list-style: none;
+  }
+
+  footer a{
+    text-decoration: none;
+    color: white;
+  }
