--- a/app/views/home.html
+++ b/app/views/home.html
@@ -11,7 +11,7 @@
 <!--TOP INFO SECTION WITH PHONES AND LOGO-->
 <header class="mb-3">
     <div class="container d-flex justify-content-center align-items-center">
-        <a href="app/views/home.html"><img src="assets/images/logo.png" alt="logo"></a>
+        <a href="app/views/home.html"><img src="../../assets/images/logo.png" alt="logo"></a>
         <ul class="row justify-content-center align-items-center mr-3">
             <li>CALL US: + 1 800-567-8990</li>
             <li>WRITE US: OFFICE@EXAMPLE.COM</li>
@@ -24,11 +24,11 @@
 <section class="homeFirst">
     <div class="container">
     <nav class="row pt-2">
-        <a class="pr-3" href="app/views/home.html">Home</a>
-        <a class="pr-3" href="app/views/about.html">About</a>
-        <a class="pr-3" href="app/views/classes.html">Classes</a>
+        <a class="pr-3" href="home.html">Home</a>
+        <a class="pr-3" href="about.html">About</a>
+        <a class="pr-3" href="classes.html">Classes</a>
         <div class="dropdown"> 
-        <span><a class="pr-3" href="app/views/pages.html">Pages</a></span>
+        <span><a class="pr-3" href="pages.html">Pages</a></span>
          <div class="dropdown-content block">
              <a class="pr-3" href="#">Classes Details</a>
              <a class="pr-3" href="#">Blog Details</a>
@@ -36,8 +36,8 @@
              <a class="pr-3" href="#">Faq</a>
          </div>
          </div>
-        <a class="pr-3" href="app/views/blog.html">Blog</a>
-        <a class="pr-3" href="app/views/contact.html">Contact</a>
+        <a class="pr-3" href="blog.html">Blog</a>
+        <a class="pr-3" href="contact.html">Contact</a>
     </nav>
     </div>
     <!--CAROUSEL-->    
