--- a/app/views/about.html
+++ b/app/views/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>About</title>
     <link rel="stylesheet" href="../../assets/css/bootstrap.css">
     <link rel="stylesheet" href="../../assets/css/style.css">
 </head>
@@ -21,7 +21,7 @@
        </div>
 </header>
 <!--NAVIGATION BAR-->
-<section class="homeFirst">
+<section class="aboutFirst">
     <div class="container">
     <nav class="row pt-2">
         <a class="pr-3" href="home.html">Home</a>
@@ -40,42 +40,64 @@
         <a class="pr-3" href="contact.html">Contact</a>
     </nav>
     </div>
-    <!--CAROUSEL-->    
-        <div id="carouselExampleInterval" class="carousel slide d-flex justify-content-center align-items-center karusele text-white" data-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active" data-interval="10000">
-                  <div class="container">
-                <div class="row">
-                    <div class="text-left w-50 carousel-text ">
-                        <span>Welcome to Zogin</span>
-                        <h2 class="mb-5">What hurts today makes you stronger tomorrow</h2>
-                        <a class="p-3" href="#">DISCOVER ME</a>
-                    </div>
-                    <div>
-                </div>
-              </div>
-              <div class="carousel-item" data-interval="2000">
-                  <div class="row">
-                    <div class="text-left w-50 carousel-text">
-                        <span>Welcome to Zogin</span>
-                        <h2>What hurts today makes you stronger tomorrow</h2>
-                        <a class="p-3" href="#">DISCOVER ME</a>
-                    </div>
-                    <div>
-                </div>
-              </div>
-
+  <div class="d-flex justify-content-center about-top-text text-white">
+    <div class="">
+        <h2>About Us</h2>
+            <div >
+                <a href="./index.html">Home</a>
+                <span>About Us</span>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
-          <!--END OF CAROUSEL-->
+    </div>
+</div>
+</section>
+<!--SECTION #2-->
+<section class="aboutSecond">
+    <div class="container">
+        <div class="d-flex justify-content-center">
+            <!--cards-->
+            <div>
+                <div class="card-deck text-center">
+                    <div class="card">
+                      <img src="../../assets/images/services-1.png" class="card-img-top kort-img" alt="services-1">
+                      <div class="card-body">
+                        <h5 class="card-title">Asana</h5>
+                        <p class="card-text">Grab the opportunity to deepen your own yoga practice, relax, restore and experience india!</p>
+                      </div>
+                    </div>
+                    <div class="card">
+                        <img src="../../assets/images/services-4.png" class="card-img-top kort-img" alt="services-4">
+                        <div class="card-body">
+                          <h5 class="card-title">Bandhas</h5>
+                          <p class="card-text">Grab the opportunity to deepen your own yoga practice, relax, restore and experience india!</p>
+                        </div>
+                      </div>
+                      <div class="card">
+                        <img src="../../assets/images/services-5.png" class="card-img-top kort-img" alt="services-5">
+                        <div class="card-body">
+                          <h5 class="card-title">Philosophy</h5>
+                          <p class="card-text">Grab the opportunity to deepen your own yoga practice, relax, restore and experience india!</p>
+                        </div>
+                      </div>
+                      <div class="card">
+                        <img src="../../assets/images/services-6.png" class="card-img-top kort-img" alt="services-6">
+                        <div class="card-body">
+                          <h5 class="card-title">Pranayama</h5>
+                          <p class="card-text">Grab the opportunity to deepen your own yoga practice, relax, restore and experience india!</p>
+                        </div>
+                      </div>
+                  </div>
+            </div>
+            <!--end of cards-->
+        </div>
+    </div>
+</section>
+<!--SECTION #2-->
+<section>
+    <div class="container">
+        <div class="d-flex justify-content-center">
+            
+        </div>
+    </div>
 </section>
 
     
