--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,3 +128,26 @@ textarea{
   .dropdown:hover .dropdown-content {
     display: block;
   }
+
+  /*ABOUT*/
+
+  .aboutFirst{
+    background-image: url('../images/breadcrumb.jpg');
+    background-size: inherit;
+    background-repeat: no-repeat;
+    height: 100vh ;
+}
+.about-top-text{
+    position: absolute;
+    top: 45%;
+    left: 45%;
+}
+
+.aboutSecond{
+    background-color: #FEFEFE;
+}
+
+.kort-img{
+    width: 133px;
+    height: 120px;
+}
