Section with progress bars

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -93,9 +93,38 @@
 </section>
 <!--SECTION #2-->
 <section>
-    <div class="container">
-        <div class="d-flex justify-content-center">
-            
+    <div class="container mt-5">
+        <div class="d-flex justify-content-between">
+             <!--left block with picture-->
+        <div class="col-4">
+            <img src="../../assets/images/about-page-pic.png" alt="about-page-pic">
+        </div>
+             <!--right block-->
+        <div class="col-5 mt-5">
+            <img class="mb-5" src="../../assets/images/rose-32.png" alt="rose-32">
+            <h2>What We Do</h2>
+            <p>To be invited to the nearest Cali center and get free physical advice to learn more about the program.</p>
+            <!--div with row #1-->
+            <div class="column justify-content-around mt-5">
+                <p>Breathing</p>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 82%;" aria-valuenow="82" aria-valuemin="0" aria-valuemax="100">82%</div>
+                  </div>
+                  <p>Methabolism</p>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 73%;" aria-valuenow="73" aria-valuemin="0" aria-valuemax="100">73%</div>
+                  </div>
+                  <p>Flexibility</p>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 82%;" aria-valuenow="82" aria-valuemin="0" aria-valuemax="100">82%</div>
+                  </div>
+                  <p>Strongness</p>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 86%;" aria-valuenow="86" aria-valuemin="0" aria-valuemax="100">86%</div>
+                  </div>
+            </div>
+        </div>
+    </div>
         </div>
     </div>
 </section>
