--- a/app/views/about.html
+++ b/app/views/about.html
@@ -128,9 +128,191 @@
         </div>
     </div>
 </section>
+<!--SECTION #3-->
+<section class="aboutThird mt-5">
+    <div class="container">
+        <div class="d-flex-column justify-content-center text-center">
+            <h2 class="mt-5">Meet Our Team</h2>
+            <p class="mt-5">We search the entire world to provide you with passionate, authentic Indian Yoga</p>
+        </div>
+        <div class="d-flex justify-content-center mt-5">
+            <!--Carousel-->
+            <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active" data-interval="10000">
+                    <div class="d-flex justify-content-center">
+                        <div>
+                            <!--card in carousel-->
+                            <div class="card mb-6" style="max-width: 540px;">
+                                <div class="row no-gutters">
+                                  <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h4 class="mt-5">Tracy Maclaren</h4>
+                                        <span class="mt-2">Yoga Teacher</span>
+                                        <p class="mt-2">Yoga &amp; Therapy Certificate of<br> Uttarakhand University Sanskirt</p>
+                                        <div class="row">
+                                            <img class="ml-3 m-1" src="../../assets/images/twitter-16.png" alt="twitter-16">
+                                            <img class="m-1" src="../../assets/images/whatsapp-16.png" alt="whatsapp-16">
+                                            <img class="m-1" src="../../assets/images/youtube-4-16.png" alt="youtube-4-16">
+                                            <img class="m-1" src="../../assets/images/facebook-3-16.png" alt="facebook-3-16">
+                                        </div>
+                                    </div>
+                                  </div>
+                                  <div class="col-md-4">
+                                    <img src="../../assets/images/team-1.png" class="card-img" alt="team-1">
+                                  </div>
+                                </div>
+                              </div>
+                              <!--end of card in carousel-->
+                        </div>
+                        <div>
+                                   <!--card in carousel-->
+                                   <div class="card mb-6" style="max-width: 540px;">
+                                    <div class="row no-gutters">
+                                      <div class="col-md-8">
+                                        <div class="card-body">
+                                            <h4 class="mt-5">Christina Lauren</h4>
+                                            <span class="mt-2">Yoga Teacher</span>
+                                          <p class="mt-2">Yoga &amp; Therapy Certificate of<br> Uttarakhand University Sanskirt</p>
+                                          <div class="row">
+                                            <img class="ml-3 m-1" src="../../assets/images/twitter-16.png" alt="twitter-16">
+                                            <img class="m-1" src="../../assets/images/whatsapp-16.png" alt="whatsapp-16">
+                                            <img class="m-1" src="../../assets/images/youtube-4-16.png" alt="youtube-4-16">
+                                            <img class="m-1" src="../../assets/images/facebook-3-16.png" alt="facebook-3-16">
+                                        </div>
+                                        </div>
+                                      </div>
+                                      <div class="col-md-4">
+                                        <img src="../../assets/images/team-2.png" class="card-img" alt="team-2">
+                                      </div>
+                                    </div>
+                                  </div>
+                                  <!--end of card in carousel-->
+                        </div>
+                    </div>
+                  </div>
+                  <div class="carousel-item" data-interval="2000">
+                    <div class="d-flex justify-content-center">
+                        <div>
+                            <!--card in carousel-->
+                            <div class="card mb-6" style="max-width: 540px;">
+                                <div class="row no-gutters">
+                                  <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h4 class="mt-5">Tracy Maclaren</h4>
+                                        <span class="mt-2">Yoga Teacher</span>
+                                        <p class="mt-2">Yoga &amp; Therapy Certificate of<br> Uttarakhand University Sanskirt</p>
+                                        <div class="row">
+                                            <img class="ml-3 m-1" src="../../assets/images/twitter-16.png" alt="twitter-16">
+                                            <img class="m-1" src="../../assets/images/whatsapp-16.png" alt="whatsapp-16">
+                                            <img class="m-1" src="../../assets/images/youtube-4-16.png" alt="youtube-4-16">
+                                            <img class="m-1" src="../../assets/images/facebook-3-16.png" alt="facebook-3-16">
+                                        </div>
+                                    </div>
+                                  </div>
+                                  <div class="col-md-4">
+                                    <img src="../../assets/images/team-1.png" class="card-img" alt="team-1">
+                                  </div>
+                                </div>
+                              </div>
+                              <!--end of card in carousel-->
+                        </div>
+                        <div>
+                                   <!--card in carousel-->
+                                   <div class="card mb-6" style="max-width: 540px;">
+                                    <div class="row no-gutters">
+                                      <div class="col-md-8">
+                                        <div class="card-body">
+                                            <h4 class="mt-5">Christina Lauren</h4>
+                                            <span class="mt-2">Yoga Teacher</span>
+                                          <p class="mt-2">Yoga &amp; Therapy Certificate of<br> Uttarakhand University Sanskirt</p>
+                                          <div class="row">
+                                            <img class="ml-3 m-1" src="../../assets/images/twitter-16.png" alt="twitter-16">
+                                            <img class="m-1" src="../../assets/images/whatsapp-16.png" alt="whatsapp-16">
+                                            <img class="m-1" src="../../assets/images/youtube-4-16.png" alt="youtube-4-16">
+                                            <img class="m-1" src="../../assets/images/facebook-3-16.png" alt="facebook-3-16">
+                                        </div>
+                                        </div>
+                                      </div>
+                                      <div class="col-md-4">
+                                        <img src="../../assets/images/team-2.png" class="card-img" alt="team-2">
+                                      </div>
+                                    </div>
+                                  </div>
+                                  <!--end of card in carousel-->
+                        </div>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="d-flex justify-content-center">
+                        <div>
+                            <!--card in carousel-->
+                            <div class="card mb-6" style="max-width: 540px;">
+                                <div class="row no-gutters">
+                                  <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h4 class="mt-5">Tracy Maclaren</h4>
+                                        <span class="mt-2">Yoga Teacher</span>
+                                        <p class="mt-2">Yoga &amp; Therapy Certificate of<br> Uttarakhand University Sanskirt</p>
+                                        <div class="row">
+                                            <img class="ml-3 m-1" src="../../assets/images/twitter-16.png" alt="twitter-16">
+                                            <img class="m-1" src="../../assets/images/whatsapp-16.png" alt="whatsapp-16">
+                                            <img class="m-1" src="../../assets/images/youtube-4-16.png" alt="youtube-4-16">
+                                            <img class="m-1" src="../../assets/images/facebook-3-16.png" alt="facebook-3-16">
+                                        </div>
+                                    </div>
+                                  </div>
+                                  <div class="col-md-4">
+                                    <img src="../../assets/images/team-1.png" class="card-img" alt="team-1">
+                                  </div>
+                                </div>
+                              </div>
+                              <!--end of card in carousel-->
+                        </div>
+                        <div>
+                                   <!--card in carousel-->
+                                   <div class="card mb-6" style="max-width: 540px;">
+                                    <div class="row no-gutters">
+                                      <div class="col-md-8">
+                                        <div class="card-body">
+                                            <h4 class="mt-5">Christina Lauren</h4>
+                                            <span class="mt-2">Yoga Teacher</span>
+                                          <p class="mt-2">Yoga &amp; Therapy Certificate of<br> Uttarakhand University Sanskirt</p>
+                                          <div class="row">
+                                            <img class="ml-3 m-1" src="../../assets/images/twitter-16.png" alt="twitter-16">
+                                            <img class="m-1" src="../../assets/images/whatsapp-16.png" alt="whatsapp-16">
+                                            <img class="m-1" src="../../assets/images/youtube-4-16.png" alt="youtube-4-16">
+                                            <img class="m-1" src="../../assets/images/facebook-3-16.png" alt="facebook-3-16">
+                                        </div>
+                                        </div>
+                                      </div>
+                                      <div class="col-md-4">
+                                        <img src="../../assets/images/team-2.png" class="card-img" alt="team-2">
+                                      </div>
+                                    </div>
+                                  </div>
+                                  <!--end of card in carousel-->
+                        </div>
+                    </div>
+                  </div>
+                </div>
+
+                <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+            <!--Carousel end-->
+        </div>
+    </div>
+</section>
 
     
-<script type="text/javascript" src="js/jquery.js"></script>
-<script type="text/javascript" src="js/bootstrap.bundle.js"></script>
+<script type="text/javascript" src="../../assets/js/jquery.js"></script>
+<script type="text/javascript" src="../../assets/js/bootstrap.bundle.js"></script>
 </body>
 </html>
