about.html done. small fixes needed

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -310,6 +310,161 @@
         </div>
     </div>
 </section>
+<!--SECTION #4-->
+<section class="aboutFourth">
+    <div class="container">
+        <div class="d-flex-column text-center justify-content-center">
+            <h2 class="mt-5">Upcoming Courses</h2>
+            <p class="mt-5">The trainings are multi-style and you will learn and practice Hatha Vinyasa (flow)
+                and Yin Yoga.</p>
+        </div>
+        <!--CARDS-->
+        <div>
+            <div class="card-deck mt-5">
+                <div class="card">
+                  <img src="../../assets/images/classes-1.PNG" class="card-img-top" alt="classes-1">
+                  <div class="card-body">
+                    <p>14 Days | Start on 10th Every Month</p>
+                    <h5 class="card-title">100 Hour Yoga Course Rishikesh</h5>
+                    <p class="card-text">Jordan Lawson - Yoga Teacher</p>
+                  </div>
+                  <div class="join-class mt-5">
+                    <a href="#">JOIN NOW</a>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="../../assets/images/classes-2.png" class="card-img-top" alt="classes-2">
+                  <div class="card-body">
+                      <p>14 Days | Start on 10th Every Month</p>
+                    <h5 class="card-title">200 Hour Yoga Course Rishikesh</h5>
+                    <p class="card-text">Jordan Lawson - Yoga Teacher</p>
+                  </div>
+                  <div class="join-class mt-5">
+                    <a href="#">JOIN NOW</a>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="../../assets/images/classes-3.png" class="card-img-top" alt="classes-3">
+                  <div class="card-body">
+                      <p>14 Days | Start on 10th Every Month</p>
+                    <h5 class="card-title">300 Hour Yoga Course Rishikesh</h5>
+                    <p class="card-text">Jordan Lawson - Yoga Teacher</p>
+                  </div>
+                  <div class="join-class mt-5">
+                    <a href="#">JOIN NOW</a>
+                  </div>
+                </div>
+              </div>
+        </div>
+    </div>
+</section>
+<!--SECTION #5-->
+<section class="aboutFifth mt-5 text-white">
+    <div class="container counter-bg">
+        <div class="d-flex justify-content-center">
+            <div class="row justify-content-around mt-5">
+                <div class="row m-5">
+                    <img class="m-2" src="../../assets/images/choose-1.png" alt="choose-1">
+                    <div>
+                        <div>2146</div>
+                        <div>students</div>
+                    </div>
+                </div>
+                <div class="row m-5">
+                    <img class="m-2" src="../../assets/images/choose-2.png" alt="choose-2">
+                    <div>
+                        <div>2146</div>
+                        <div>students</div>
+                    </div>
+                </div>
+                <div class="row m-5">
+                    <img class="m-2" src="../../assets/images/choose-3.png" alt="choose-3">
+                    <div>
+                        <div>2146</div>
+                        <div>students</div>
+                    </div>
+                </div>
+                <div class="row m-5">
+                    <img class="m-2" src="../../assets/images/choose-4.png" alt="choose-4">
+                    <div>
+                        <div>2146</div>
+                        <div>students</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!--FOOTER-->
+<footer class="mt-5">
+    <section class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-4">
+                    <div class="footer__about">
+                        <img src="../../assets/images/footer-logo.png" alt="footer-logo">
+                        <ul>
+                            <li> Mon - Fri: 6:30am - 07:45pm</li>
+                            <li> Sat - Sun: 8:30am - 05:45pm</li>
+                        </ul>
+                        <form action="#">
+                            <input type="text" placeholder="Your Email">
+                            <button type="submit">Submit</button>
+                        </form>
+                        </div>
+                        </div>
+                        <div class="col-2">
+                            <div>
+                            <h5>Inspiration</h5>
+                                <ul>
+                                    <li><a href="#">Online Pilates</a></li>
+                                    <li><a href="#">Yoga for Beginners</a></li>
+                                    <li><a href="#">Online Pilates</a></li>
+                                    <li><a href="#">Online Yoga</a></li>
+                                    <li><a href="#">Conditioning</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-2">
+                            <div>
+                                <h5>About Us</h5>
+                                <ul>
+                                    <li><a href="#">Our Vision</a></li>
+                                    <li><a href="#">Our Mission</a></li>
+                                    <li><a href="#">Meet The Team</a></li>
+                                    <li><a href="#">Introduce</a></li>
+                                    <li><a href="#">Customer Service</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-6">
+                            <div>
+                                <h5>Contact Us</h5>
+                                <ul>
+                                    <li> (01) 436 8888</li>
+                                    <li> hello@zogin.com</li>
+                                    <li> 828 Granville Lights Suite 466</li>
+                                </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div>
+                        <div class="row">
+                        <div class="col-6">
+                            <div>
+                                <p>Copyright ©2020 All rights reserved | This template is made with  by Colorlib</p>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                        <div>
+                        <!--INSERT SOCIAL MEDIA ICONS-->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </section>
+</footer>
 
     
 <script type="text/javascript" src="../../assets/js/jquery.js"></script>
