Start of classes.html. Navigation + footer + first section with selections

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -44,7 +44,7 @@
     <div class="">
         <h2>About Us</h2>
             <div >
-                <a href="./index.html">Home</a>
+                <a href="../views/home.html">About us</a>
                 <span>About Us</span>
             </div>
     </div>
