Classes.html done. Small fixes will be added later

--- a/app/views/classes.html
+++ b/app/views/classes.html
@@ -51,7 +51,7 @@
 </div>
 </section>
 <!--SECTION #1 WITH SELECTS-->
-<section>
+<section class="classesFirst">
     <div class="container zoom ">
         <div class="d-flex justify-content-center">
             <div class="input-group mb-3 m-2">
@@ -63,7 +63,7 @@
                 </select>
               </div>
               
-              <div class="input-group mb-3 m-2 column">
+              <div class="input-group mb-3 m-2">
                 <select class="custom-select" id="inputGroupSelect02">
                   <option selected>Choose...</option>
                   <option value="1">One</option>
@@ -95,9 +95,176 @@
         </div>
     </div>
 </section>
+<!--SECTION #2-->
+<section class="classesSecond">
+    <div class="container">
+        <div class="d-flex justify-content-center">
+            <div class="container">
+                <div class="d-flex-column text-center justify-content-center">
+                </div>
+                <!--CARDS-->
+                <div>
+                    <div class="card-deck mt-5">
+                        <div class="card col-4">
+                          <img src="../../assets/images/classes-1.PNG" class="card-img-top" alt="classes-1">
+                          <div class="card-body">
+                            <p>14 Days | Start on 10th Every Month</p>
+                            <h5 class="card-title">100 Hour Yoga Course Rishikesh</h5>
+                            <p class="card-text">Jordan Lawson - Yoga Teacher</p>
+                          </div>
+                          <div class="join-class mt-5">
+                            <a href="#">JOIN NOW</a>
+                          </div>
+                        </div>
+                        <div class="card col-4">
+                          <img src="../../assets/images/classes-2.png" class="card-img-top" alt="classes-2">
+                          <div class="card-body">
+                              <p>14 Days | Start on 10th Every Month</p>
+                            <h5 class="card-title">200 Hour Yoga Course Rishikesh</h5>
+                            <p class="card-text">Jordan Lawson - Yoga Teacher</p>
+                          </div>
+                          <div class="join-class mt-5">
+                            <a href="#">JOIN NOW</a>
+                          </div>
+                        </div>
+                        <div class="card col-4">
+                          <img src="../../assets/images/classes-3.png" class="card-img-top" alt="classes-3">
+                          <div class="card-body">
+                              <p>14 Days | Start on 10th Every Month</p>
+                            <h5 class="card-title">300 Hour Yoga Course Rishikesh</h5>
+                            <p class="card-text">Jordan Lawson - Yoga Teacher</p>
+                          </div>
+                          <div class="join-class mt-5">
+                            <a href="#">JOIN NOW</a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="card-deck mt-5">
+                        <div class="card col-4">
+                          <img src="../../assets/images/classes-1.PNG" class="card-img-top" alt="classes-1">
+                          <div class="card-body">
+                            <p>14 Days | Start on 10th Every Month</p>
+                            <h5 class="card-title">100 Hour Yoga Course Rishikesh</h5>
+                            <p class="card-text">Jordan Lawson - Yoga Teacher</p>
+                          </div>
+                          <div class="join-class mt-5">
+                            <a href="#">JOIN NOW</a>
+                          </div>
+                        </div>
+                        <div class="card col-4">
+                          <img src="../../assets/images/classes-2.png" class="card-img-top" alt="classes-2">
+                          <div class="card-body">
+                              <p>14 Days | Start on 10th Every Month</p>
+                            <h5 class="card-title">200 Hour Yoga Course Rishikesh</h5>
+                            <p class="card-text">Jordan Lawson - Yoga Teacher</p>
+                          </div>
+                          <div class="join-class mt-5">
+                            <a href="#">JOIN NOW</a>
+                          </div>
+                        </div>
+                        <div class="card col-4">
+                          <img src="../../assets/images/classes-3.png" class="card-img-top" alt="classes-3">
+                          <div class="card-body">
+                              <p>14 Days | Start on 10th Every Month</p>
+                            <h5 class="card-title">300 Hour Yoga Course Rishikesh</h5>
+                            <p class="card-text">Jordan Lawson - Yoga Teacher</p>
+                          </div>
+                          <div class="join-class mt-5">
+                            <a href="#">JOIN NOW</a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="card-deck mt-5">
+                        <div class="card col-4">
+                          <img src="../../assets/images/classes-1.PNG" class="card-img-top" alt="classes-1">
+                          <div class="card-body">
+                            <p>14 Days | Start on 10th Every Month</p>
+                            <h5 class="card-title">100 Hour Yoga Course Rishikesh</h5>
+                            <p class="card-text">Jordan Lawson - Yoga Teacher</p>
+                          </div>
+                          <div class="join-class mt-5">
+                            <a href="#">JOIN NOW</a>
+                          </div>
+                        </div>
+                        <div class="card col-4">
+                          <img src="../../assets/images/classes-2.png" class="card-img-top" alt="classes-2">
+                          <div class="card-body">
+                              <p>14 Days | Start on 10th Every Month</p>
+                            <h5 class="card-title">200 Hour Yoga Course Rishikesh</h5>
+                            <p class="card-text">Jordan Lawson - Yoga Teacher</p>
+                          </div>
+                          <div class="join-class mt-5">
+                            <a href="#">JOIN NOW</a>
+                          </div>
+                        </div>
+                        <div class="card col-4">
+                          <img src="../../assets/images/classes-3.png" class="card-img-top" alt="classes-3">
+                          <div class="card-body">
+                              <p>14 Days | Start on 10th Every Month</p>
+                            <h5 class="card-title">300 Hour Yoga Course Rishikesh</h5>
+                            <p class="card-text">Jordan Lawson - Yoga Teacher</p>
+                          </div>
+                          <div class="join-class mt-5">
+                            <a href="#">JOIN NOW</a>
+                          </div>
+                        </div>
+                      </div>
+                 </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!--SECTION #3-->
+<section class="classesThird">
+    <div class="container">
+        <div class="d-flex-column text-center justify-content-center">
+            <h2 class="mt-5">Top Classess</h2>
+            <p class="mt-5">The trainings are multi-style and you will learn and practice Hatha Vinyasa (flow)
+                and Yin Yoga.</p>
+        </div>
+        <!--CARDS-->
+        <div>
+            <div class="card-deck mt-5 pb-5">
+                <div class="card">
+                  <img src="../../assets/images/classes-1.PNG" class="card-img-top" alt="classes-1">
+                  <div class="card-body">
+                    <p>14 Days | Start on 10th Every Month</p>
+                    <h5 class="card-title">100 Hour Yoga Course Rishikesh</h5>
+                    <p class="card-text">Jordan Lawson - Yoga Teacher</p>
+                  </div>
+                  <div class="join-class mt-5">
+                    <a href="#">JOIN NOW</a>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="../../assets/images/classes-2.png" class="card-img-top" alt="classes-2">
+                  <div class="card-body">
+                      <p>14 Days | Start on 10th Every Month</p>
+                    <h5 class="card-title">200 Hour Yoga Course Rishikesh</h5>
+                    <p class="card-text">Jordan Lawson - Yoga Teacher</p>
+                  </div>
+                  <div class="join-class mt-5">
+                    <a href="#">JOIN NOW</a>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="../../assets/images/classes-3.png" class="card-img-top" alt="classes-3">
+                  <div class="card-body">
+                      <p>14 Days | Start on 10th Every Month</p>
+                    <h5 class="card-title">300 Hour Yoga Course Rishikesh</h5>
+                    <p class="card-text">Jordan Lawson - Yoga Teacher</p>
+                  </div>
+                  <div class="join-class mt-5">
+                    <a href="#">JOIN NOW</a>
+                  </div>
+                </div>
+              </div>
+        </div>
+    </div>
+</section>
 
 <!--FOOTER-->
-<footer class="mt-5">
+<footer>
     <section class="footer">
         <div class="container">
             <div class="row">
