--- a/app/views/classes.html
+++ b/app/views/classes.html
@@ -210,7 +210,24 @@
                         </div>
                       </div>
                  </div>
+            
+
+                  <nav class="d-flex justify-content-center mt-5" aria-label="...">
+                    <ul class="pagination pagination-lg">
+                      <li class="page-item active" aria-current="page">
+                        <span class="page-link m-1">
+                          1
+                          <span class="sr-only">(current)</span>
+                        </span>
+                      </li>
+                      <li class="page-item"><a class="page-link m-1" href="#">2</a></li>
+                      <li class="page-item">
+                        <a class="page-link m-1" href="#">></a>
+                      </li>
+                    </ul>
+                  </nav>
             </div>
+            
         </div>
     </div>
 </section>
