--- a/app/views/home.html
+++ b/app/views/home.html
@@ -41,40 +41,67 @@
     </nav>
     </div>
     <!--CAROUSEL-->    
-        <div id="carouselExampleInterval" class="carousel slide d-flex justify-content-center align-items-center karusele text-white" data-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active" data-interval="10000">
-                  <div class="container">
-                <div class="row">
-                    <div class="text-left w-50 carousel-text ">
-                        <span>Welcome to Zogin</span>
-                        <h2 class="mb-5">What hurts today makes you stronger tomorrow</h2>
-                        <a class="p-3" href="#">DISCOVER ME</a>
-                    </div>
-                    <div>
+    <div id="carouselExampleInterval" class="carousel slide karusele text-white" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-interval="10000">
+            <div class="d-flex justify-content-start">
+                <div class="container carousel-text">  
+                    <!--card in carousel-->
+                    <span>Welcome to Zogin</span>
+                          <h2 class="mb-5">What hurts today makes you stronger tomorrow</h2>
+                          <a class="p-3" href="#">DISCOVER ME</a>
+                      <!--end of card in carousel-->
                 </div>
-              </div>
-              <div class="carousel-item" data-interval="2000">
-                  <div class="row">
-                    <div class="text-left w-50 carousel-text">
-                        <span>Welcome to Zogin</span>
-                        <h2>What hurts today makes you stronger tomorrow</h2>
-                        <a class="p-3" href="#">DISCOVER ME</a>
-                    </div>
-                    <div>
+                <div>
+                           <!--card in carousel-->
+                  
+                          <!--end of card in carousel-->
                 </div>
-              </div>
-
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
           </div>
+          <div class="carousel-item" data-interval="2000">
+            <div class="d-flex justify-content-center">
+                <div class="container carousel-text">
+                    <!--card in carousel-->
+                    <span>Welcome to Zogin</span>
+                          <h2 class="mb-5">What hurts today makes you stronger tomorrow</h2>
+                          <a class="p-3" href="#">DISCOVER ME</a>
+                      <!--end of card in carousel-->
+                </div>
+                <div>
+                           <!--card in carousel-->
+                  
+                          <!--end of card in carousel-->
+                </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="d-flex justify-content-center">
+                <div class="container carousel-text">
+                    <!--card in carousel-->
+                    <span>Welcome to Zogin</span>
+                          <h2 class="mb-5">What hurts today makes you stronger tomorrow</h2>
+                          <a class="p-3" href="#">DISCOVER ME</a>
+                      <!--end of card in carousel-->
+                </div>
+                <div>
+                           <!--card in carousel-->
+                     
+                          <!--end of card in carousel-->
+                </div>
+            </div>
+          </div>
+        </div>
+  
+        <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
           <!--END OF CAROUSEL-->
 </section>
 <!--SECTION #1 START-->
@@ -468,7 +495,7 @@
         </section>
 </footer>
     
-<script type="text/javascript" src="js/jquery.js"></script>
-<script type="text/javascript" src="js/bootstrap.bundle.js"></script>
+<script type="text/javascript" src="../../assets/js/jquery.js"></script>
+<script type="text/javascript" src="../../assets/js/bootstrap.bundle.js"></script>
 </body>
 </html>
