--- a/app/views/blog.html
+++ b/app/views/blog.html
@@ -22,29 +22,36 @@
 </header>
 <!--NAVIGATION BAR-->
 <section class="aboutFirst">
-    <div class="container">
-    <nav class="row pt-2">
-        <a class="pr-3" href="home.html">Home</a>
-        <a class="pr-3" href="about.html">About</a>
-        <a class="pr-3" href="classes.html">Classes</a>
-        <div class="dropdown"> 
-        <span><a class="pr-3" href="pages.html">Pages</a></span>
-         <div class="dropdown-content block">
-             <a class="pr-3" href="#">Classes Details</a>
-             <a class="pr-3" href="#">Blog Details</a>
-             <a class="pr-3" href="#">Pricing</a>
-             <a class="pr-3" href="#">Faq</a>
-         </div>
-         </div>
-        <a class="pr-3" href="blog.html">Blog</a>
-        <a class="pr-3" href="contact.html">Contact</a>
-    </nav>
-    </div>
+    <div class="container d-flex justify-content-around">
+        <nav class="row pt-2">
+            <a class="mr-3" href="home.html">HOME</a>
+            <a class="mr-3" href="about.html">ABOUT</a>
+            <a class="mr-3" href="classes.html">CLASSES</a>
+            <div class="dropdown"> 
+            <span><a class="mr-3" href="pages.html">PAGES</a></span>
+             <div class="dropdown-content block">
+                 <a class="mr-3" href="#">CLASSES DETAILS</a>
+                 <a class="mr-3" href="#">BLOG DETAILS</a>
+                 <a class="mr-3" href="#">PRICING</a>
+                 <a class="mr-3" href="#">FAQ</a>
+             </div>
+             </div>
+            <a class="mr-3 actv" href="blog.html">BLOG</a>
+            <a class="mr-3" href="contact.html">CONTACT</a>
+        </nav>
+    
+        <span>
+            <img class="mr-4" src="../../assets/images/instagram-16 (1).png" alt="instagram-16">
+            <img class="mr-4" src="../../assets/images/facebook-3-16 (1).png" alt="facebook-3-16">
+            <img class="mr-4" src="../../assets/images/twitter-16 (1).png" alt="twitter-16">
+            <img class="mr-4" src="../../assets/images/youtube-4-16 (1).png" alt="youtube-4-16">
+        </span>
+        </div>
   <div class="d-flex justify-content-center about-top-text text-white">
     <div class="">
-        <h2>Contact Us</h2>
+        <h2>Blog</h2>
             <div >
-                <a href="../views/home.html">Home</a>
+                <a href="../views/home.html">Home/</a>
                 <span>Blog</span>
             </div>
     </div>
@@ -58,75 +65,76 @@
             <div class=" col-4">
                 <div class="blog-categories">
                     <h4>Categories</h4>
-                    <ul>
-                    <li><a href="#">All</a></li>
-                    <li><a href="#">Fuel (20)</a></li>
-                    <li><a href="#">Sweat (5)</a></li>
-                    <li><a href="#">Play (9)</a></li>
-                    <li><a href="#">Live (10)</a></li>
+                    <ul class="p-0">
+                    <li class="mb-3 mt-2"><a href="#">All</a></li>
+                    <li class="mb-3"><a href="#">Fuel (20)</a></li>
+                    <li class="mb-3"><a href="#">Sweat (5)</a></li>
+                    <li class="mb-3"><a href="#">Play (9)</a></li>
+                    <li class="mb-3"><a href="#">Live (10)</a></li>
                     </ul>
                     </div>
 
                     <div class="blog-recent">
                         <h4>Recent News</h4>
-                        <div class="blog-item">
-                        <div class="blog-recent-item-pic">
-                        <img src="img/blog/br-1.jpg" alt="">
+                        <div class="blog-item d-flex m-3">
+                            <div class="blog-recent-item-pic mr-2">
+                            <img src="../../assets/images/br-1.jpg" alt="br-1">
+                            </div>
+                            <div class="blog-recent-item-text">
+                            <h6>09 Kinds Of Vegetables Protect The Liver</h6>
+                            <span>MAR 05, 2019</span>
+                            </div>
                         </div>
-                        <div class="blog-recent-item-text">
-                        <h6>09 Kinds Of Vegetables Protect The Liver</h6>
-                        <span>MAR 05, 2019</span>
+                        <div class="blog-item d-flex m-3">
+                            <div class="blog-_recent-item-pic mr-2">
+                            <img src="../../assets/images/br-2.jpg" alt="br-2">
+                            </div>
+                            <div class="blog-recent-item-text">
+                            <h6>Tips You To Balance Nutrition Meal Day</h6>
+                            <span>MAR 05, 2019</span>
+                            </div>
                         </div>
-                        </div>
-                        <div class="blog-recent-item">
-                        <div class="blog-_recent-item-pic">
-                        <img src="img/blog/br-2.jpg" alt="">
-                        </div>
-                        <div class="blog-recent-item-text">
-                        <h6>Tips You To Balance Nutrition Meal Day</h6>
-                        <span>MAR 05, 2019</span>
-                        </div>
-                        </div>
-                        <div class="blog-recent-item">
-                        <div class="blog-recent-item-pic">
-                        <img src="img/blog/br-3.jpg" alt="">
-                        </div>
-                        <div class="blog-recent-item-text">
-                        <h6>4 Principles Help You Lose Weight With Vegetables</h6>
-                        <span>MAR 05, 2019</span>
-                        </div>
+                        <div class="blog-item d-flex m-3">
+                            <div class="blog-recent-item-pic mr-2">
+                            <img src="../../assets/images/br-3.jpg" alt="br-3">
+                            </div>
+                            <div class="blog-recent-item-text">
+                            <h6>4 Principles Help You Lose Weight With Vegetables</h6>
+                            <span>MAR 05, 2019</span>
+                            </div>
                         </div>
                         </div>
 
                         <div class="blog-sidebar-tags">
-                            <h4>Search By Tags</h4>
-                            <a href="#">Weight</a>
-                            <a href="#">Beauty</a>
-                             <a href="#">Yoga Ball</a>
-                            <a href="#">Fruit</a>
-                            <a href="#">Healthy Food</a>
-                            <a href="#">Lifestyle</a>
+                            <h4 class="mt-5 mb-2">Search By Tags</h4>
+                            <a class="p-2 m-2" href="#">Weight</a>
+                            <a class="p-2 m-2" href="#">Beauty</a>
+                             <a class="p-2 m-2" href="#">Yoga Ball</a>
+                            <a class="p-2 m-2" href="#">Fruit</a>
+                            <a class="p-2 m-2" href="#">Healthy Food</a>
+                            <a class="p-2 m-2" href="#">Lifestyle</a>
                             </div>
 
                             <div class="blog-sidebar-comment">
-                                <h4>Comment</h4>
+                                <h4 class="mt-5">Comment</h4>
+                                <div class="classes-sidebar-comment d-flex
+                                 ">
+                                            <div class="classes-sidebar-comment-pic">
+                                                <img src="../../assets/images/comment-1.png" alt="comment-1">
+                                                <div class="classes-sidebar-comment-rating">
+                                            <!--INSERT STAR ICONS-->
+                                                </div>
+                                            </div>
+                                    <div class="classes-sidebar-comment-text">
+                                    <span>04 Mar 2018</span>
+                                    <h6>Brandon Kelley</h6>
+                                    <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur,
+                                    adipisci velit,</p>
+                                    </div>
+                                </div>
                                 <div class="classes-sidebar-comment">
                                 <div class="classes-sidebar-comment-pic">
-                                <img src="img/classes-details/comment-1.png" alt="">
-                                <div class="classes-sidebar-comment-rating">
-                              <!--INSERT STAR ICONS-->
-                                </div>
-                                </div>
-                                <div class="classes-sidebar-comment-text">
-                                <span>04 Mar 2018</span>
-                                <h6>Brandon Kelley</h6>
-                                <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur,
-                                adipisci velit,</p>
-                                </div>
-                                </div>
-                                <div class="classes-sidebar-comment">
-                                <div class="classes-sidebar-comment-pic">
-                                <img src="img/classes-details/comment-2.png" alt="">
+                                <img src="../../assets/images/comment-2.png" alt="comment-2">
                                 <div class="classes-sidebar-comment-rating">
                              <!--INSERT STAR ICONS-->
                                 </div>
@@ -150,8 +158,8 @@
                         <h5 class="card-title">100 Hour Yoga Course Rishikesh</h5>
                         <p class="card-text">Jordan Lawson - Yoga Teacher</p>
                       </div>
-                      <div class="join-class mt-5">
-                        <a href="#">JOIN NOW</a>
+                      <div class="join-blog mt-2 ml-4">
+                        <a href="#">READ MORE -></a>
                       </div>
                     </div>
                     <div class="card col-6">
@@ -161,8 +169,8 @@
                         <h5 class="card-title">200 Hour Yoga Course Rishikesh</h5>
                         <p class="card-text">Jordan Lawson - Yoga Teacher</p>
                       </div>
-                      <div class="join-class mt-5">
-                        <a href="#">JOIN NOW</a>
+                      <div class="join-blog mt-2 ml-4">
+                        <a href="#">READ MORE -></a>
                       </div>
                     </div>
                 
@@ -175,8 +183,8 @@
                         <h5 class="card-title">100 Hour Yoga Course Rishikesh</h5>
                         <p class="card-text">Jordan Lawson - Yoga Teacher</p>
                       </div>
-                      <div class="join-class mt-5">
-                        <a href="#">JOIN NOW</a>
+                      <div class="join-blog mt-2 ml-4">
+                        <a href="#">READ MORE -></a>
                       </div>
                     </div>
                     <div class="card col-6">
@@ -186,8 +194,8 @@
                         <h5 class="card-title">200 Hour Yoga Course Rishikesh</h5>
                         <p class="card-text">Jordan Lawson - Yoga Teacher</p>
                       </div>
-                      <div class="join-class mt-5">
-                        <a href="#">JOIN NOW</a>
+                      <div class="join-blog mt-2 ml-4">
+                        <a href="#">READ MORE -></a>
                       </div>
                     </div>
                   </div>
@@ -199,8 +207,8 @@
                         <h5 class="card-title">100 Hour Yoga Course Rishikesh</h5>
                         <p class="card-text">Jordan Lawson - Yoga Teacher</p>
                       </div>
-                      <div class="join-class mt-5">
-                        <a href="#">JOIN NOW</a>
+                      <div class="join-blog mt-2 ml-4">
+                        <a href="#">READ MORE -></a>
                       </div>
                     </div>
                     <div class="card col-6">
@@ -210,8 +218,8 @@
                         <h5 class="card-title">200 Hour Yoga Course Rishikesh</h5>
                         <p class="card-text">Jordan Lawson - Yoga Teacher</p>
                       </div>
-                      <div class="join-class mt-5">
-                        <a href="#">JOIN NOW</a>
+                      <div class="join-blog mt-2 ml-4">
+                        <a href="#">READ MORE -></a>
                       </div>
                     </div>
                   </div>
