--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -22,33 +22,41 @@
 </header>
 <!--NAVIGATION BAR-->
 <section class="aboutFirst">
-    <div class="container">
-    <nav class="row pt-2">
-        <a class="pr-3" href="home.html">Home</a>
-        <a class="pr-3" href="about.html">About</a>
-        <a class="pr-3" href="classes.html">Classes</a>
-        <div class="dropdown"> 
-        <span><a class="pr-3" href="pages.html">Pages</a></span>
-         <div class="dropdown-content block">
-             <a class="pr-3" href="#">Classes Details</a>
-             <a class="pr-3" href="#">Blog Details</a>
-             <a class="pr-3" href="#">Pricing</a>
-             <a class="pr-3" href="#">Faq</a>
-         </div>
-         </div>
-        <a class="pr-3" href="blog.html">Blog</a>
-        <a class="pr-3" href="contact.html">Contact</a>
-    </nav>
-    </div>
-  <div class="d-flex justify-content-center about-top-text text-white">
-    <div class="">
-        <h2>Contact Us</h2>
-            <div >
-                <a href="../views/home.html">Home</a>
-                <span>Contact Us</span>
+    <section class="aboutFirst">
+        <div class="container d-flex justify-content-around">
+            <nav class="row pt-2">
+                <a class="mr-3" href="home.html">HOME</a>
+                <a class="mr-3" href="about.html">ABOUT</a>
+                <a class="mr-3" href="classes.html">CLASSES</a>
+                <div class="dropdown"> 
+                <span><a class="mr-3" href="pages.html">PAGES</a></span>
+                 <div class="dropdown-content block">
+                     <a class="mr-3" href="#">CLASSES DETAILS</a>
+                     <a class="mr-3" href="#">BLOG DETAILS</a>
+                     <a class="mr-3" href="#">PRICING</a>
+                     <a class="mr-3" href="#">FAQ</a>
+                 </div>
+                 </div>
+                <a class="mr-3 actv" href="blog.html">BLOG</a>
+                <a class="mr-3 actv" href="contact.html">CONTACT</a>
+            </nav>
+        
+            <span>
+                <img class="mr-4" src="../../assets/images/instagram-16 (1).png" alt="instagram-16">
+                <img class="mr-4" src="../../assets/images/facebook-3-16 (1).png" alt="facebook-3-16">
+                <img class="mr-4" src="../../assets/images/twitter-16 (1).png" alt="twitter-16">
+                <img class="mr-4" src="../../assets/images/youtube-4-16 (1).png" alt="youtube-4-16">
+            </span>
             </div>
+      <div class="d-flex justify-content-center about-top-text text-white">
+        <div class="">
+            <h2>Contact Us</h2>
+                <div >
+                    <a href="../views/home.html">Home/</a>
+                    <span>Contact Us</span>
+                </div>
+        </div>
     </div>
-</div>
 </section>
 <!--SECTION #1-->
 <section class="contactFirst">
