Small fixes implemented

--- a/app/views/classes.html
+++ b/app/views/classes.html
@@ -51,7 +51,7 @@
   <div class="d-flex justify-content-center about-top-text text-white">
     <div class="">
         <h2>Our Classes</h2>
-            <div >
+            <div class="central-nav">
                 <a href="../views/home.html">Home/</a>
                 <span>Our Classes</span>
             </div>
@@ -120,7 +120,7 @@
                             <h5 class="card-title">100 Hour Yoga Course Rishikesh</h5>
                             <p class="card-text">Jordan Lawson - Yoga Teacher</p>
                           </div>
-                          <div class="join-class mt-5">
+                          <div class="join-class mt-2">
                             <a href="#">JOIN NOW</a>
                           </div>
                         </div>
@@ -131,7 +131,7 @@
                             <h5 class="card-title">200 Hour Yoga Course Rishikesh</h5>
                             <p class="card-text">Jordan Lawson - Yoga Teacher</p>
                           </div>
-                          <div class="join-class mt-5">
+                          <div class="join-class mt-2">
                             <a href="#">JOIN NOW</a>
                           </div>
                         </div>
@@ -142,7 +142,7 @@
                             <h5 class="card-title">300 Hour Yoga Course Rishikesh</h5>
                             <p class="card-text">Jordan Lawson - Yoga Teacher</p>
                           </div>
-                          <div class="join-class mt-5">
+                          <div class="join-class mt-2">
                             <a href="#">JOIN NOW</a>
                           </div>
                         </div>
@@ -155,7 +155,7 @@
                             <h5 class="card-title">100 Hour Yoga Course Rishikesh</h5>
                             <p class="card-text">Jordan Lawson - Yoga Teacher</p>
                           </div>
-                          <div class="join-class mt-5">
+                          <div class="join-class mt-2">
                             <a href="#">JOIN NOW</a>
                           </div>
                         </div>
@@ -166,7 +166,7 @@
                             <h5 class="card-title">200 Hour Yoga Course Rishikesh</h5>
                             <p class="card-text">Jordan Lawson - Yoga Teacher</p>
                           </div>
-                          <div class="join-class mt-5">
+                          <div class="join-class mt-2">
                             <a href="#">JOIN NOW</a>
                           </div>
                         </div>
@@ -177,7 +177,7 @@
                             <h5 class="card-title">300 Hour Yoga Course Rishikesh</h5>
                             <p class="card-text">Jordan Lawson - Yoga Teacher</p>
                           </div>
-                          <div class="join-class mt-5">
+                          <div class="join-class mt-2">
                             <a href="#">JOIN NOW</a>
                           </div>
                         </div>
@@ -190,7 +190,7 @@
                             <h5 class="card-title">100 Hour Yoga Course Rishikesh</h5>
                             <p class="card-text">Jordan Lawson - Yoga Teacher</p>
                           </div>
-                          <div class="join-class mt-5">
+                          <div class="join-class mt-2">
                             <a href="#">JOIN NOW</a>
                           </div>
                         </div>
@@ -201,7 +201,7 @@
                             <h5 class="card-title">200 Hour Yoga Course Rishikesh</h5>
                             <p class="card-text">Jordan Lawson - Yoga Teacher</p>
                           </div>
-                          <div class="join-class mt-5">
+                          <div class="join-class mt-2">
                             <a href="#">JOIN NOW</a>
                           </div>
                         </div>
@@ -212,7 +212,7 @@
                             <h5 class="card-title">300 Hour Yoga Course Rishikesh</h5>
                             <p class="card-text">Jordan Lawson - Yoga Teacher</p>
                           </div>
-                          <div class="join-class mt-5">
+                          <div class="join-class mt-2">
                             <a href="#">JOIN NOW</a>
                           </div>
                         </div>
@@ -250,36 +250,36 @@
         <!--CARDS-->
         <div>
             <div class="card-deck mt-5 pb-5">
-                <div class="card">
+                <div class="card pb-2">
                   <img src="../../assets/images/classes-1.PNG" class="card-img-top" alt="classes-1">
                   <div class="card-body">
                     <p>14 Days | Start on 10th Every Month</p>
                     <h5 class="card-title">100 Hour Yoga Course Rishikesh</h5>
                     <p class="card-text">Jordan Lawson - Yoga Teacher</p>
                   </div>
-                  <div class="join-class mt-5">
+                  <div class="join-class mt-2">
                     <a href="#">JOIN NOW</a>
                   </div>
                 </div>
-                <div class="card">
+                <div class="card pb-2">
                   <img src="../../assets/images/classes-2.png" class="card-img-top" alt="classes-2">
                   <div class="card-body">
                       <p>14 Days | Start on 10th Every Month</p>
                     <h5 class="card-title">200 Hour Yoga Course Rishikesh</h5>
                     <p class="card-text">Jordan Lawson - Yoga Teacher</p>
                   </div>
-                  <div class="join-class mt-5">
+                  <div class="join-class mt-2">
                     <a href="#">JOIN NOW</a>
                   </div>
                 </div>
-                <div class="card">
+                <div class="card pb-2">
                   <img src="../../assets/images/classes-3.png" class="card-img-top" alt="classes-3">
                   <div class="card-body">
                       <p>14 Days | Start on 10th Every Month</p>
                     <h5 class="card-title">300 Hour Yoga Course Rishikesh</h5>
                     <p class="card-text">Jordan Lawson - Yoga Teacher</p>
                   </div>
-                  <div class="join-class mt-5">
+                  <div class="join-class mt-2">
                     <a href="#">JOIN NOW</a>
                   </div>
                 </div>
