--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -37,7 +37,7 @@
                      <a class="mr-3" href="#">FAQ</a>
                  </div>
                  </div>
-                <a class="mr-3 actv" href="blog.html">BLOG</a>
+                <a class="mr-3" href="blog.html">BLOG</a>
                 <a class="mr-3 actv" href="contact.html">CONTACT</a>
             </nav>
         
@@ -51,7 +51,7 @@
       <div class="d-flex justify-content-center about-top-text text-white">
         <div class="">
             <h2>Contact Us</h2>
-                <div >
+                <div class="central-nav" >
                     <a href="../views/home.html">Home/</a>
                     <span>Contact Us</span>
                 </div>
