--- a/app/views/about.html
+++ b/app/views/about.html
@@ -51,7 +51,7 @@
   <div class="d-flex justify-content-center about-top-text text-white">
     <div class="">
         <h2>About Us</h2>
-            <div >
+            <div class="central-nav" >
                 <a href="../views/home.html">Home/</a>
                 <span>About Us</span>
             </div>
@@ -59,35 +59,43 @@
 </div>
 </section>
 <!--SECTION #2-->
-<section class="aboutSecond">
+<section class="aboutSecond mt-5">
     <div class="container">
         <div class="d-flex justify-content-center">
             <!--cards-->
-            <div>
+            
                 <div class="card-deck text-center">
                     <div class="card">
-                      <img src="../../assets/images/services-1.png" class="card-img-top kort-img" alt="services-1">
+                      <div>
+                      <img class="" src="../../assets/images/services-1.png" class="card-img-top kort-img" alt="services-1">
+                      </div>
                       <div class="card-body">
                         <h5 class="card-title">Asana</h5>
                         <p class="card-text">Grab the opportunity to deepen your own yoga practice, relax, restore and experience india!</p>
                       </div>
                     </div>
                     <div class="card">
+                      <div>
                         <img src="../../assets/images/services-4.png" class="card-img-top kort-img" alt="services-4">
+                      </div>
                         <div class="card-body">
                           <h5 class="card-title">Bandhas</h5>
                           <p class="card-text">Grab the opportunity to deepen your own yoga practice, relax, restore and experience india!</p>
                         </div>
                       </div>
                       <div class="card">
+                        <div>
                         <img src="../../assets/images/services-5.png" class="card-img-top kort-img" alt="services-5">
+                        </div>
                         <div class="card-body">
                           <h5 class="card-title">Philosophy</h5>
                           <p class="card-text">Grab the opportunity to deepen your own yoga practice, relax, restore and experience india!</p>
                         </div>
                       </div>
                       <div class="card">
+                        <div>
                         <img src="../../assets/images/services-6.png" class="card-img-top kort-img" alt="services-6">
+                        </div>
                         <div class="card-body">
                           <h5 class="card-title">Pranayama</h5>
                           <p class="card-text">Grab the opportunity to deepen your own yoga practice, relax, restore and experience india!</p>
@@ -96,39 +104,49 @@
                   </div>
             </div>
             <!--end of cards-->
-        </div>
+        
     </div>
 </section>
 <!--SECTION #2-->
-<section>
+<section class="bg-left">
+  
     <div class="container mt-5">
         <div class="d-flex justify-content-between">
+         
              <!--left block with picture-->
         <div class="col-4">
-            <img src="../../assets/images/about-page-pic.png" alt="about-page-pic">
+            <img class="girl-img" src="../../assets/images/about-page-pic.png" alt="about-page-pic">
         </div>
              <!--right block-->
-        <div class="col-5 mt-5">
+        <div class="col-5 mt-5 bg-right">
             <img class="mb-5" src="../../assets/images/rose-32.png" alt="rose-32">
             <h2>What We Do</h2>
             <p>To be invited to the nearest Cali center and get free physical advice to learn more about the program.</p>
             <!--div with row #1-->
             <div class="column justify-content-around mt-5">
-                <p>Breathing</p>
+              <div class="d-flex">
+                <p>Breathing</p><span class="prog1">82%</span>
+              </div>
                 <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 82%;" aria-valuenow="82" aria-valuemin="0" aria-valuemax="100">82%</div>
+                    <div class="progress-bar" role="progressbar" style="width: 82%;" aria-valuenow="82" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
-                  <p>Methabolism</p>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 73%;" aria-valuenow="73" aria-valuemin="0" aria-valuemax="100">73%</div>
+                  <div class="d-flex">
+                    <p>Methabolism</p><span class="prog2">73%</span>
                   </div>
-                  <p>Flexibility</p>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 82%;" aria-valuenow="82" aria-valuemin="0" aria-valuemax="100">82%</div>
+                    <div class="progress-bar" role="progressbar" style="width: 73%;" aria-valuenow="73" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
-                  <p>Strongness</p>
+                  <div class="d-flex">
+                    <p>Flexibility</p><span class="prog3">82%</span>
+                  </div>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 86%;" aria-valuenow="86" aria-valuemin="0" aria-valuemax="100">86%</div>
+                    <div class="progress-bar" role="progressbar" style="width: 82%;" aria-valuenow="82" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                  <div class="d-flex">
+                    <p>Strongness</p><span class="prog4">86%</span>
+                  </div>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 86%;" aria-valuenow="86" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
             </div>
         </div>
@@ -137,23 +155,29 @@
     </div>
 </section>
 <!--SECTION #3-->
-<section class="aboutThird mt-5">
+<section class="aboutThird bg-darker mt-5">
     <div class="container">
         <div class="d-flex-column justify-content-center text-center">
+          <img class="mt-5" src="../../assets/images/rose-32.png" alt="rose">
             <h2 class="mt-5">Meet Our Team</h2>
             <p class="mt-5">We search the entire world to provide you with passionate, authentic Indian Yoga</p>
         </div>
         <div class="d-flex justify-content-center mt-5">
             <!--Carousel-->
-            <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
+            
+            <!--Carousel end-->
+        </div>
+    </div>
+     <!--Carousel-->
+    <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active" data-interval="10000">
                     <div class="d-flex justify-content-center">
                         <div>
                             <!--card in carousel-->
-                            <div class="card mb-6" style="max-width: 540px;">
+                            <div class="card mb-5 mr-5" style="max-width: 540px;">
                                 <div class="row no-gutters">
-                                  <div class="col-md-8">
+                                  <div class="col-6">
                                     <div class="card-body">
                                         <h4 class="mt-5">Tracy Maclaren</h4>
                                         <span class="mt-2">Yoga Teacher</span>
@@ -166,8 +190,8 @@
                                         </div>
                                     </div>
                                   </div>
-                                  <div class="col-md-4">
-                                    <img src="../../assets/images/team-1.png" class="card-img" alt="team-1">
+                                  <div class="col-6">
+                                    <img  src="../../assets/images/team-1.png" class="card-img" alt="team-1">
                                   </div>
                                 </div>
                               </div>
@@ -175,9 +199,9 @@
                         </div>
                         <div>
                                    <!--card in carousel-->
-                                   <div class="card mb-6" style="max-width: 540px;">
+                                   <div class="card mb-5" style="max-width: 540px;">
                                     <div class="row no-gutters">
-                                      <div class="col-md-8">
+                                      <div class="col-6">
                                         <div class="card-body">
                                             <h4 class="mt-5">Christina Lauren</h4>
                                             <span class="mt-2">Yoga Teacher</span>
@@ -190,8 +214,8 @@
                                         </div>
                                         </div>
                                       </div>
-                                      <div class="col-md-4">
-                                        <img src="../../assets/images/team-2.png" class="card-img" alt="team-2">
+                                      <div class="col-md-6">
+                                        <img  src="../../assets/images/team-2.png" class="card-img" alt="team-2">
                                       </div>
                                     </div>
                                   </div>
@@ -203,9 +227,9 @@
                     <div class="d-flex justify-content-center">
                         <div>
                             <!--card in carousel-->
-                            <div class="card mb-6" style="max-width: 540px;">
+                            <div class="card mb-5 mr-5" style="max-width: 540px;">
                                 <div class="row no-gutters">
-                                  <div class="col-md-8">
+                                  <div class="col-6">
                                     <div class="card-body">
                                         <h4 class="mt-5">Tracy Maclaren</h4>
                                         <span class="mt-2">Yoga Teacher</span>
@@ -218,7 +242,7 @@
                                         </div>
                                     </div>
                                   </div>
-                                  <div class="col-md-4">
+                                  <div class="col-6">
                                     <img src="../../assets/images/team-1.png" class="card-img" alt="team-1">
                                   </div>
                                 </div>
@@ -227,9 +251,9 @@
                         </div>
                         <div>
                                    <!--card in carousel-->
-                                   <div class="card mb-6" style="max-width: 540px;">
+                                   <div class="card mb-5" style="max-width: 540px;">
                                     <div class="row no-gutters">
-                                      <div class="col-md-8">
+                                      <div class="col-6">
                                         <div class="card-body">
                                             <h4 class="mt-5">Christina Lauren</h4>
                                             <span class="mt-2">Yoga Teacher</span>
@@ -242,7 +266,7 @@
                                         </div>
                                         </div>
                                       </div>
-                                      <div class="col-md-4">
+                                      <div class="col-6">
                                         <img src="../../assets/images/team-2.png" class="card-img" alt="team-2">
                                       </div>
                                     </div>
@@ -255,9 +279,9 @@
                     <div class="d-flex justify-content-center">
                         <div>
                             <!--card in carousel-->
-                            <div class="card mb-6" style="max-width: 540px;">
+                            <div class="card mb-5 mr-5" style="max-width: 540px;">
                                 <div class="row no-gutters">
-                                  <div class="col-md-8">
+                                  <div class="col-6">
                                     <div class="card-body">
                                         <h4 class="mt-5">Tracy Maclaren</h4>
                                         <span class="mt-2">Yoga Teacher</span>
@@ -270,7 +294,7 @@
                                         </div>
                                     </div>
                                   </div>
-                                  <div class="col-md-4">
+                                  <div class="col-6">
                                     <img src="../../assets/images/team-1.png" class="card-img" alt="team-1">
                                   </div>
                                 </div>
@@ -279,9 +303,9 @@
                         </div>
                         <div>
                                    <!--card in carousel-->
-                                   <div class="card mb-6" style="max-width: 540px;">
+                                   <div class="card mb-5" style="max-width: 540px;">
                                     <div class="row no-gutters">
-                                      <div class="col-md-8">
+                                      <div class="col-6">
                                         <div class="card-body">
                                             <h4 class="mt-5">Christina Lauren</h4>
                                             <span class="mt-2">Yoga Teacher</span>
@@ -294,7 +318,7 @@
                                         </div>
                                         </div>
                                       </div>
-                                      <div class="col-md-4">
+                                      <div class="col-6">
                                         <img src="../../assets/images/team-2.png" class="card-img" alt="team-2">
                                       </div>
                                     </div>
@@ -314,9 +338,7 @@
                   <span class="sr-only">Next</span>
                 </a>
               </div>
-            <!--Carousel end-->
-        </div>
-    </div>
+               <!--Carousel end-->
 </section>
 <!--SECTION #4-->
 <section class="aboutFourth">
@@ -336,7 +358,7 @@
                     <h5 class="card-title">100 Hour Yoga Course Rishikesh</h5>
                     <p class="card-text">Jordan Lawson - Yoga Teacher</p>
                   </div>
-                  <div class="join-class mt-5">
+                  <div class="join-class mt-2">
                     <a href="#">JOIN NOW</a>
                   </div>
                 </div>
@@ -347,7 +369,7 @@
                     <h5 class="card-title">200 Hour Yoga Course Rishikesh</h5>
                     <p class="card-text">Jordan Lawson - Yoga Teacher</p>
                   </div>
-                  <div class="join-class mt-5">
+                  <div class="join-class mt-2">
                     <a href="#">JOIN NOW</a>
                   </div>
                 </div>
@@ -358,7 +380,7 @@
                     <h5 class="card-title">300 Hour Yoga Course Rishikesh</h5>
                     <p class="card-text">Jordan Lawson - Yoga Teacher</p>
                   </div>
-                  <div class="join-class mt-5">
+                  <div class="join-class mt-2">
                     <a href="#">JOIN NOW</a>
                   </div>
                 </div>
