--- a/app/views/blog.html
+++ b/app/views/blog.html
@@ -50,7 +50,7 @@
   <div class="d-flex justify-content-center about-top-text text-white">
     <div class="">
         <h2>Blog</h2>
-            <div >
+            <div class="central-nav">
                 <a href="../views/home.html">Home/</a>
                 <span>Blog</span>
             </div>
